Fix code quality warnings: remove unused imports, suppress intentional unused variables, modernize URL constructors
- Removed 3 unused imports (DroneSystem, RawFlow, ImageIO)
- Added @SuppressWarnings for 8 intentional cases:
  * Monitor variables in Easy*Monitor examples (run in background threads)
  * Test variables in ErrorDataTest and MultiSensorTest
  * Reserved fields in ControllerInput GUI components
  * Deprecated method tests in TestEducationalException and OpticalFlowTest
- Replaced deprecated URL(String) constructors with URI.create().toURL()
  * Fixed 4 occurrences in WeatherService.java
  * Added java.net.URI import

Reduces VSCode problems from 38 to 7 (all remaining are external/unfixable)
Build passes, all tests successful